fixed sidebar collapses

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -130,14 +130,14 @@ body {
     background-color: #0d6efd;
 }
 
-.bd-sidebar {
+.sidebar {
     grid-area: sidebar;
 }
 .collapse:not(.show) {
     display: none;
 }
 
-.bd-links {
+.links {
     position: -webkit-sticky;
     position: sticky;
     top: 5rem;
@@ -148,37 +148,39 @@ body {
     overflow: auto;
     font-weight: 600;
 }
-.bd-links .form-check {
+.links .form-check {
     padding: .1875rem .5rem;
     margin-top: .125rem;
     margin-left: 0.75rem;
     color: rgba(0,0,0,0.65);
 }
-.bd-links .btn {
+.links .btn {
     padding: .25rem .5rem;
     font-weight: 600;
     color: rgba(0,0,0,0.65);
     background-color: transparent;
     border: 0;
 }
-.bd-links .btn::before {
+.links .btn::before {
     width: 1.25em;
     line-height: 0;
     content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
     transition: transform 0.35s ease;
     transform-origin: .5em 50%;
 }
-.bd-links .btn[aria-expanded="true"]::before {
+.links .btn[aria-expanded="true"]::before {
     transform: rotate(90deg);
 }
-.bd-links .btn[aria-expanded="true"] {
+.links .btn[aria-expanded="true"] {
     color: rgba(0,0,0,0.85);
 }
-.bd-links .btn:hover, .bd-links .btn:focus,
-.bd-links .form-check:hover, .bd-links .form-check:focus {
+.links .btn:hover,
+.links .btn:focus,
+.links .form-check:hover,
+.links .form-check:focus {
     background-color: rgba(121,82,179,0.1);
 }
-.bd-links .form-check .form-check-input {
+.links .form-check .form-check-input {
     margin-left: initial;
     margin-right: 0.5em;
 }
